	* modified default buffer size in ags_soundcard.h
	* added ags_add_audio_test.c
	* added ags_add_audio_signal_test.c
	* added ags_add_effect_test.c
	* added ags_add_note_test.c
	* added ags_add_soundcard_test.c
	* added ags_apply_bpm_test.c
	* added ags_apply_presets_test.c
	* added ags_apply_sequencer_length_test.c
	* added ags_apply_synth_test.c
	* added ags_apply_tact_test.c
	* added ags_clear_audio_signal_test.c
	* added ags_clear_buffer_test.c
	* added ags_crop_note_test.c

ags (2.0.34)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing ags-feed recall in factory
	* fixed missing property AgsAnalyseChannel:buffer-cleared
	* fixed ags_copy_channel_new() to use correct property AgsRecallChannel:source
	* fixed ags_copy_pattern_audio_new() to use correct type to set bank-index-0 and bank-index-1
	* fixed ags_peak_channel_new() to use correct property AgsRecallChannel:source
	* added ags_recall_recycling_test.c
	* added ags_envelope_audio_signal_test.c
	* added ags_eq10_audio_signal_test.c
	* added ags_feed_audio_signal_test.c
	* added ags_mute_audio_signal_test.c
	* added ags_peak_audio_signal_test.c
	* added ags_play_audio_signal_test.c
	* added ags_prepare_audio_signal_test.c
	* added ags_stream_audio_signal_test.c
	* added ags_volume_audio_signal_test.c
	* added ags_analyse_channel_test.c
	* added ags_buffer_channel_test.c
	* added ags_capture_wave_audio_test.c
	* added ags_capture_wave_channel_test.c
	* added ags_copy_channel_test.c
	* added ags_copy_pattern_audio_test.c
	* added ags_copy_pattern_channel_test.c
	* added ags_count_beats_audio_test.c
	* added ags_delay_audio_test.c
	* added ags_envelope_channel_test.c
	* added ags_eq10_channel_test.c
	* added ags_mute_audio_test.c
	* added ags_mute_channel_test.c
	* added ags_peak_channel_test.c
	* added ags_play_audio_test.c
	* added ags_play_channel_test.c
	* added ags_play_wave_audio_test.c
	* added ags_play_wave_channel_test.c
	* added ags_record_midi_audio_test.c