@@ -14,9 +14,12 @@ ags (2.0.35)
 	* added ags_apply_sequencer_length_test.c
 	* added ags_apply_synth_test.c
 	* added ags_apply_tact_test.c
+	* added ags_cancel_audio_test.c
+	* added ags_cancel_channel_test.c
 	* added ags_clear_audio_signal_test.c
 	* added ags_clear_buffer_test.c
 	* added ags_crop_note_test.c
+	* added ags_export_output_test.c
 
 ags (2.0.34)
 
